--- a/web/deploy/default.conf
+++ b/web/deploy/default.conf
@@ -16,7 +16,7 @@ server {
     }
 
     location ~ ^(/auth|/callback|/search)/ {
-        proxy_pass http://127.0.0.1:3001
+        proxy_pass http://127.0.0.1:3001;
     }
 
     error_page   500 502 503 504  /50x.html;
