--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang:alpine AS build
 RUN apk update && \
-    apk add --no-cache git
+    apk add --no-cache git ca-certificates && \
+    update-ca-certificates
 
 WORKDIR /app/src
 COPY . .
@@ -8,6 +9,7 @@ RUN go get -d -v
 RUN CGO_ENABLED=0 go build -v -o /app/build
 
 FROM scratch
+COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=build /app/build /app/build
 
 ENTRYPOINT ["/app/build"]
