--- a/web/deploy/default.conf
+++ b/web/deploy/default.conf
@@ -15,7 +15,7 @@ server {
         proxy_set_header Host $host;
     }
 
-    location ~ ^(/auth|/callback|/search)/ {
+    location ~ ^/(auth|callback|search) {
         proxy_pass http://127.0.0.1:3001;
     }
 
