--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:lts-slim AS build
 WORKDIR /app/src
 COPY . .
-RUN yarn build --verbose
+RUN npm i && \
+    yarn build --verbose
 
 FROM nginx:1.16.1-alpine
 COPY --from=build /app/src/build /usr/share/nginx/html
