Fix apk update sometimes hanging at 'fetch http://dl-cdn.alpinelinux.org/alpine/v3.11/main/x86_64/APKINDEX.tar.gz'
solution from https://github.com/gliderlabs/docker-alpine/issues/307#issuecomment-357247928

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build-api:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - cd api
-    - docker build --pull -t "${CI_REGISTRY_IMAGE}/api" .
+    - docker build --pull --network host -t "${CI_REGISTRY_IMAGE}/api" .
     - docker push "${CI_REGISTRY_IMAGE}/api"
 
 build-web:
@@ -28,5 +28,5 @@ build-web:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - cd web
-    - docker build --pull -t "${CI_REGISTRY_IMAGE}/web" .
+    - docker build --pull --network host -t "${CI_REGISTRY_IMAGE}/web" .
     - docker push "${CI_REGISTRY_IMAGE}/web"
