--- a/web/package.json
+++ b/web/package.json
@@ -3,24 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.47",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@welldone-software/why-did-you-render": "^4.0.6",
-    "axios": "^0.19.2",
-    "fuse.js": "^5.0.10-beta",
-    "http-proxy-middleware": "^1.0.3",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.4.13",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
+    "@welldone-software/why-did-you-render": "^6.2.0",
+    "axios": "^0.21.1",
+    "fuse.js": "^6.4.6",
+    "http-proxy-middleware": "^2.0.1",
     "rc-texty": "^0.2.0",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.13.1",
-    "react-highlight-words": "^0.16.0",
+    "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "react-reveal": "^1.2.2",
-    "react-scripts": "^3.4.1",
-    "string-similarity": "^4.0.1"
+    "react-scripts": "^4.0.3",
+    "reconnecting-websocket": "^4.4.0",
+    "string-similarity": "^4.0.4",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
